test/errors/parsing/implicitSubModule.compopts
anotherModuleForTesting.chpl --main-module anotherModuleForTesting -o implicitSubModule
